fix: restaurant address spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -88,6 +88,7 @@ nav h1 a {
     padding: 10px 40px 16px;
     list-style: none;
     background-color: #eee;
+
     font-size: 17px;
     margin: 0;
     width: calc(50% - 80px);
@@ -126,7 +127,7 @@ nav h1 a {
 .filter-options {
   width: 100%;
   height: 100%;
-  background-color: #3397DB;
+  background-color: orange;
   align-items: center;
 	padding: 10px 0;
 }
